--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ code {
 .basic {
     text-align: center;
     position: relative;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
 }
 
 p {
