--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,41 @@
-code {
-    background-color: aqua;
+body{
+    background-color: rgb(170, 170, 255);
 }
+
 
 .basic {
     text-align: center;
     position: relative;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.5;
+    /* color: aqua; */
+}
+
+code {
+    background-color: aqua;
+    color: black;
 }
 
 p {
     font-size: 20px;
 }
+
+.table-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  table {
+    border-collapse: collapse;
+    width: 80%; /* A largura da tabela */
+  }
+  
+  th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+  }
+  
+  th {
+    background-color:rgb(115, 115, 252);;
+  }
