--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ body{
 }
 
 code {
-    background-color: aqua;
-    color: black;
+    background-color:blueviolet;
+    color: white;
 }
 
 p {
@@ -39,3 +39,45 @@ p {
   th {
     background-color:rgb(115, 115, 252);;
   }
+
+  .list-container {
+    display: flex;
+    justify-content: center;
+  }
+
+  mark{
+    background-color: blueviolet;
+  }
+
+  .block-elements-container,
+  .inline-elements-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  
+  .block-elements-container > div,
+  .inline-elements-container > span {
+    margin: 0 10px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .container > div,
+  .container > span {
+    margin: 20px;
+    padding: 20px;
+    border: 2px solid black;
+    background-color: rgb(186, 142, 228);
+    color: white;
+  }
+  
+  .container > span {
+    font-size: 120%;
+    color: red;
+  }
+
+  
