--- a/styles.css
+++ b/styles.css
@@ -80,4 +80,12 @@ p {
     color: red;
   }
 
-  
+  footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position:relative;
+    bottom: 0;
+    width: 100%;
+}
